# obelus

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  biome.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: archivist.md  compositor.md  curator.md  proofreader.md  scribe.md  typesetter.md
.claude/commands/: new-issue.md  oss-audit.md  plugin-e2e.md  security-audit.md  web-check.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  config.yml  docs.md  docs.yml  feature.md  feature_request.yml  performance.yml  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_claude_model_effort.sql  0002_diff_hunks_holistic.sql  0002_review_session_status.sql  0003_diff_hunks_reviewer_notes.sql  0003_file_pins.sql  0003_hunk_apply_failure.sql  0004_paper_edits.sql  0004_paper_edits_parent_cascade.sql  0004_paper_format.sql  0005_annotation_staleness.sql  0005_annotations_resolved_in.sql  0006_paper_format_html.sql  0006_project_metadata.sql
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  migrations.rs  state.rs
apps/desktop/src-tauri/src/commands/: apply.rs  claude.rs  claude_session.rs  claude_user_settings.rs  db_tx.rs  dialog.rs  factory_reset.rs  fs_scoped.rs  history.rs  latex.rs  metrics.rs  mod.rs  opencode.rs  opencode_session.rs  plan_render.rs  preflight.rs  project.rs  project_meta.rs  reset_local_state.rs  spawn_common.rs  time.rs  typst.rs  workspace.rs
apps/desktop/src-tauri/src/commands/engines/: commands.rs  download.rs  extract.rs  manifest.rs  mod.rs  resolver.rs  verify.rs
apps/desktop/src-tauri/src/commands/engines/fixtures/: typst-sample.tar.xz
brand/: README.md
docs/: RELEASING.md  drafter-design.md  opencode-followups.md  pinned-engines.md  plan-example.md  plan.md
homebrew/: obelus.rb.tmpl
scripts/: capture-metrics.mjs  eval-review-quality.mjs  guard-bundle-size.mjs  guard-desktop-only.mjs  guard-network.mjs  guard-schema-emit.mjs  install-obelus-opencode.mjs  install-skills.mjs  plugin-e2e.mjs  render-prompt-fragments.mjs
(+347 files in other folders)
