[package]
name = "obelus-desktop"
version = "0.1.0" # x-release-please-version
description = "Obelus desktop app"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[lib]
name = "obelus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "json"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dashmap = "6"
tokio = { version = "1", features = ["process", "time", "macros", "rt", "io-util", "fs", "sync"] }
which = "7"
semver = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
sha2 = "0.10"
diffy = "0.4"
