[package]
name = "obelus-desktop"
version = "0.1.7" # x-release-please-version
description = "Obelus desktop app"
edition = "2021"
rust-version = "1.77"
license = "MIT"
publish = false

[lib]
name = "obelus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "json"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dashmap = "6"
tokio = { version = "1", features = ["process", "time", "macros", "rt", "io-util", "fs", "sync"] }
which = "8"
semver = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
sha2 = "0.11"
diffy = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
